# cellier

./: .gitignore  README.md  pyproject.toml  typos.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: camera_model_update.md  cellier_controller_phase1_plan.md  cellier_v2_event_bus_design.md  cellier_v2_eventbus_implementation_plan.md  cellier_v2_render_architecture_plan.md  chunked_volume_rendering.md  index.md  logging.md  making_new_visual.md  slicing.md  viewer_model_plan_1.md
docs/Explanations/: architecture.md  coordinate_systems.md  debugging_events.md  events.md  logging.md  repo_structure.md  slicing.md
docs/How_To/: debug_events.md
docs/api/: controller.md  data.md  gui.md  paint.md  render.md  scene.md  transform.md  visuals.md
docs/stylesheets/: extra.css
docs/v2/: 2d_proxy_texture.md  affine_transform_plan.md  cellier_v2_event_bus_design.md  debugging_events.md  dims_slicing_pipeline.md  image_memory_implementation_plan.md  lod_pipeline.md  logging.md  opacity.md  widget_design.md
examples/: build_viewer_model.py  make_points_example_config.py  make_qt_viewer.py  make_single_canvas_config.py  oblique_slicing.py  points_example_config.json  points_slicing_example.py  qt_example.py  single_canvas_config.json
examples/chunked_rendering/: make_zarr_sample.py  viewer.py
examples/convenience/: multiscale_image_viewer.ipynb  multiscale_image_viewer.py  multiscale_image_viewer_marimo.py  simple_image_viewer.ipynb  simple_image_viewer.py  simple_image_viewer_marimo.py  simple_ortho_viewer.ipynb  simple_ortho_viewer.py  simple_ortho_viewer_marimo.py
examples/image/: orthoviewer.py
examples/labels/: labels_demo.py
examples/multiscale_chunked_rendering/: make_zarr_sample.py  viewer.py
examples/multiscale_chunked_rendering_new/: lod_debug_image.py  make_zarr_sample.py
examples/octree/: octree_pyfx.py  tiled_render_zarr.py
examples/tiled_rendering/: octree_pyfx.py  tiled_render_zarr.py  zarr_example_viewer.py
examples/volume/: make_latent_volume_config.py  make_simple_volume_config.py  simple_async_volume.py  simple_volume.py  (+1 more)
scripts/: rendered_slice_lazy.py
scripts/v2/chunked_rendering/: example_2d.py  example_3d.py  example_combined.py  pyproject.toml
scripts/v2/chunked_rendering/src/image_block/: __init__.py
scripts/v2/chunked_rendering/src/image_block/core/: __init__.py  block_key.py  cache.py  state_base.py  store.py  tile_manager.py
scripts/v2/chunked_rendering/src/image_block/image/: cache.py  culling.py  layout.py  load.py  lut.py  material.py  shader.py  state.py  tile_manager.py  uniforms.py
scripts/v2/chunked_rendering/src/image_block/volume/: __init__.py  cache.py  frustum.py  load.py  lut.py  shader.py  state.py  tile_manager.py  uniforms.py
scripts/v2/chunked_rendering/src/image_block/wgsl/: image_block.wgsl
scripts/v2/lut_texture/: example.py  pyproject.toml
scripts/v2/lut_texture/src/block_volume/: __init__.py  cache.py  lut.py  material.py  shader.py  uniforms.py
scripts/v2/lut_texture/src/block_volume/wgsl/: volume_block.wgsl
scripts/v2/lut_texture/tests/: test_cache.py  test_layout.py  test_lut.py  test_uniforms.py
scripts/v2/lut_texture_multiscale_frustum/: example.py  pyproject.toml
scripts/v2/lut_texture_multiscale_frustum/src/block_volume/: __init__.py  frustum.py  material.py  shader.py  uniforms.py
scripts/v2/lut_texture_multiscale_frustum_async/: example.py  pyproject.toml
scripts/v2/lut_texture_multiscale_frustum_async/src/block_volume/: __init__.py  frustum.py  layout.py  lod.py  lut.py  tile_manager.py  uniforms.py
tests/: conftest.py
(+719 files in other folders)
