[project]
name = "image-block"
version = "0.1.0"
description = "Phase 1: async multiscale 2D image rendering with LUT indirection"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pygfx>=0.7.0",
    "rendercanvas",
    "scikit-image",
    "pyside6",
    "tensorstore",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_block"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["E", "W", "F", "D", "D417", "I", "UP", "C4", "B", "A001", "RUF", "TCH", "TID"]
ignore = ["D401"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false
