[project]
name = "block-volume"
version = "0.1.0"
description = "LUT-based brick-cache volume renderer for pygfx"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pygfx>=0.7.0",
    "rendercanvas[glfw]",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/block_volume"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",
    "W",
    "F",
    "D",
    "D417",
    "I",
    "UP",
    "C4",
    "B",
    "A001",
    "RUF",
    "TCH",
    "TID",
]
ignore = [
    "D401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
