[project]
name = "async-brick-loading"
version = "0.1.0"
description = "Phase 3: async brick loading with tensorstore + QtAsyncio"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pygfx>=0.7.0",
    "rendercanvas",
    "scikit-image",
    "scipy",
    "pyside6",
    "tensorstore",
    # zarr is NOT a runtime dependency — make_multiscale_zarr now uses
    # tensorstore's zarr3 write path.  No zarr package required.
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/block_volume"]
